# prevent-outage-edge-testing

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  VALIDATION_REPORT_2026-02-04.md  pyproject.toml
.github/workflows/: ci.yml
demo/: Makefile  README.md  docker-compose.yml  faulty.conf  nginx.conf  upstream1.conf  upstream2.conf
docs/: first-10-minutes.md  inputs.md  jira.md  outputs.md
examples/: TESTPLAN.cache-change.md  gate_report.json  observability_runbook.md
knowledge/: PACK_IMPACT_legacy_suites_2026-02-04.md  REVIEW_legacy_suites_2026-02-04.md
knowledge/curated/: .gitkeep
mappings/: internal_patterns_to_obligations.yaml
obligations/: index.md
obligations/cache/: key.stability.yaml  vary.honored.yaml
obligations/observability/: access.logged.yaml  metrics.exposed.yaml
obligations/protocol/: content.length.yaml  http.status.yaml
obligations/resilience/: graceful.degradation.yaml  retry.bounded.yaml  timeout.enforced.yaml
obligations/routing/: backend.selection.yaml  fanout.bound.yaml  healthcheck.respect.yaml
obligations/security/: client.ip.preserved.yaml  mtls.client.verified.yaml  tls.chain.valid.yaml
obligations/state/: config.reload.atomic.yaml  ratelimit.enforced.yaml
packs/edge-http-cache-correctness/: README.md  pack.yaml
packs/edge-http-cache-correctness/recipes/: cache-metrics.md
packs/edge-http-cache-correctness/snippets/: cache_test_client.py
packs/edge-latency-regression-observability/: README.md  demo.py  pack.yaml
packs/edge-latency-regression-observability/recipes/: bpftrace-linux.md  dtrace-freebsd.md  latency-histogram.md  simulation-mode.md
packs/edge-latency-regression-observability/snippets/: latency_analyzer.py  latency_simulator.py  syscall_latency.d
packs/fault-injection-io/: README.md  demo.py  pack.yaml
packs/fault-injection-io/recipes/: fault-injection-metrics.md  ldpreload-injection.md  python-injection.md
packs/fault-injection-io/snippets/: fault_inject.c  fault_simulator.py  socket_fault_injector.py
src/prevent_outage_edge_testing/: __init__.py  builder.py  cli.py  models.py  registry.py
src/prevent_outage_edge_testing/cli/: __init__.py  main.py
src/prevent_outage_edge_testing/core/: __init__.py  builder.py  config.py  knowledge.py
src/prevent_outage_edge_testing/extractors/: __init__.py  base.py  privileged.py  registry.py
src/prevent_outage_edge_testing/gates/: __init__.py  definitions.py  models.py  reporter.py  runner.py
src/prevent_outage_edge_testing/learner/: __init__.py  analyzer.py  extractor.py  models.py  pack_advisor.py  storage.py
tests/: __init__.py  conftest.py  test_builder.py  test_extractors.py  test_learner.py  test_models.py  test_registry.py
(+14 files in other folders)
